# very_simple_rest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENT_PLAN.md  LICENSE  PRODUCTION_TODO.md  README.md  SECURITY.md  USAGE.md  package-lock.json  package.json
crates/rest_api_cli/: Cargo.toml  README.md  build.rs
crates/rest_api_cli/src/: error.rs  lib.rs  main.rs
crates/rest_api_cli/src/commands/: admin.rs  authz.rs  backup.rs  check.rs  client.rs  db.rs  docs.rs  env.rs  gen_env.rs  init.rs  migrate.rs  mod.rs  openapi.rs  schema.rs  secrets.rs  serve.rs  serve_manager.rs  server.rs  setup.rs  tls.rs
crates/rest_api_cli/tests/: client_cli.rs  serve_cli.rs
crates/rest_api_cli/tests/snapshots/check/: auth_ui_path_collision_api.txt  authorization_contract_api.txt  hybrid_runtime_api.json
crates/rest_api_cli/tests/snapshots/client_self_test/: public_catalog_static_report.json
crates/rest_api_cli/tests/snapshots/server_expand/: blog_api_summary.txt  cms_api_summary.txt
crates/rest_macro/: Cargo.toml
crates/rest_macro/src/: authold  lib.rs  lib_fixed.rs
crates/rest_macro_admin_ui_egui_final/: Cargo.toml
crates/rest_macro_admin_ui_egui_final/src/: lib.rs
crates/rest_macro_core/: Cargo.toml
crates/rest_macro_core/src/: auth.rs  authorization.rs  database.rs  db.rs  email.rs  errors.rs  lib.rs  logging.rs  runtime.rs  secret.rs  security.rs  static_files.rs  storage.rs  tls.rs
crates/rest_macro_core/src/auth/: admin.rs  db_ops.rs  email.rs  handlers.rs  helpers.rs  jwt.rs  migrations.rs  mod.rs  pages.rs  routing.rs  settings.rs  tokens.rs  user.rs
crates/rest_macro_core/src/authorization/: db_ops.rs  engine.rs  handlers.rs  migrations.rs  mod.rs  routing.rs  types.rs
crates/rest_macro_core/src/compiler/: authorization.rs  codegen.rs  derive_parser.rs  eon_parser.rs  migrations.rs  mod.rs  model.rs  openapi.rs  source_loader.rs
crates/rest_macro_core/src/compiler/codegen/: garde_tokens.rs  list_tokens.rs  payload_tokens.rs  policy_plan_tokens.rs  resource_action_tokens.rs  resource_impl.rs  resource_struct_tokens.rs  service_tokens.rs  typed_object_tokens.rs
crates/rest_macro_core/src/compiler/eon_parser/: config_parsing.rs  documents.rs  field_parsing.rs  policy_parsing.rs  resource_builder.rs  storage_parsing.rs  tests.rs
crates/rest_macro_core/tests/snapshots/openapi/: api_alias_surface.json  api_projection_surface.json  asymmetric_jwt_surface.json  authz_management_surface.json  builtin_auth_admin_surface.json  builtin_auth_email_surface.json  computed_fields_surface.json  enum_fields_surface.json  field_transforms_surface.json  list_fields_surface.json  many_to_many_surface.json  mixin_fields_surface.json  object_fields_surface.json  public_catalog_surface.json  resource_actions_surface.json  response_contexts_surface.json  storage_upload_surface.json
crates/vsr-core/: Cargo.toml
crates/vsr-core/src/: clock.rs  db.rs  error.rs  lib.rs  secret.rs  testing.rs
crates/vsr-runtime/: Cargo.toml
crates/vsr-runtime/src/: lib.rs
crates/vsr-runtime/src/audit/: mod.rs
crates/vsr-runtime/src/auth/: mod.rs  smtp.rs
crates/vsr-runtime/src/authz/: mod.rs
crates/vsr-runtime/src/http/: actix_adapter.rs  mod.rs
crates/vsr-runtime/src/rate_limit/: mod.rs
crates/vsr-runtime/src/storage/: local.rs  mod.rs
crates/vsr_schema_doc/: Cargo.toml
crates/vsr_schema_doc/src/: lib.rs
docs/: authorization-roadmap.md  book.toml  eon-reference.md  eon-vnext-roadmap.md  infisical.md
examples/: Cargo.toml
examples/bridgeboard/: README.md  bridgeboard.eon
examples/bridgeboard/certs/: dev-cert.pem  dev-key.pem
examples/bridgeboard/public/: app.js  index.html  styles.css
examples/cms/: .gitignore  README.md  api.eon  import-asset.sh  seed-studio.sh
examples/cms/web/: README.md  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
examples/cms/web/src/: App.tsx  index.css  main.tsx  theme.ts
examples/cms/web/src/components/: CollectionWorkspace.tsx  ConfirmDialog.tsx  EntryWorkspace.tsx  FieldInput.tsx  LoginScreen.tsx  OverviewScreen.tsx  PagePreview.tsx  ScopeNotice.tsx  SitePreviewScreen.tsx  StudioShell.tsx  UsersWorkspace.tsx  WorkspaceDialog.tsx
examples/cms/web/src/lib/: api.ts  cms.tsx  draft.ts  openapi.ts  preview.ts  runtime.ts
examples/demo/: Cargo.toml  README.md
examples/demo/public/: README.md  app.js  index.html
examples/demo/src/: main.rs
examples/family_app/: README.md  auth_extension.sql  family_app.eon
examples/family_app/migrations/: 0003_authz.sql  0004_family_app.sql
examples/family_app/public/: app.js  index.html  styles.css
examples/fine_grained_policies/: README.md  auth_extension.sql  ops_control.eon  seed.sql
examples/sqlite_bench/: README.md  commerce.eon  seed.sql
examples/template/: .env.example  .gitignore  Cargo.toml  README.md  api.eon
examples/template/public/: app.js  index.html
examples/template/src/: main.rs
examples/todo_app/: README.md  todo_app.eon
examples/todo_app/public/: app.js  index.html
scripts/: backend_parity_smoke.sh  backup_export_smoke.sh  backup_s3_smoke.sh  client_self_test_examples.sh  prepare_vsr_release.sh  replication_doctor_smoke.sh
src/: lib.rs
tests/: api_computed_fields_api.rs  api_contexts_api.rs  api_name_alias_api.rs  api_projection_api.rs  audit_action_events_api.rs  audit_events_api.rs  auth_claims.rs  auth_errors.rs  auth_management.rs  authz_management.rs  bridgeboard_example.rs  compile_fail.rs  composed_policies.rs  create_requirements.rs  create_visibility_api.rs  datetime_api.rs  derive_macro.rs  enum_fields_api.rs  eon_macro.rs  exists_group_policies.rs  exists_policies.rs  family_app_example.rs  field_transforms_api.rs  fine_grained_policies_api.rs  hybrid_runtime_enforcement.rs  list_fields_api.rs  list_filter_in_count.rs  list_pagination.rs  many_to_many_api.rs  mixin_fields_api.rs  not_exists_policies.rs  object_fields_api.rs  public_catalog_api.rs  relation_delete.rs  resource_actions_api.rs  row_policy.rs  scalar_types_api.rs  service_runtime.rs  service_security.rs  static_files.rs  (+5 more)
(+83 files in other folders)
