[workspace]
members = [ "crates/rest_api_cli",
    "crates/rest_macro",
    "crates/rest_macro_core",
    "examples/demo"
]
default-members = ["crates/rest_api_cli"]
resolver = "2"

[workspace.dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "any", "macros", "chrono"] }
serde_json = "1.0"
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.19"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.40"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
proc-macro-crate = "3"
eon = "0.2.0"
heck = "0.5"
dotenv = "0.15.0"
rand = "0.10.0"
uuid = { version = "1.22", features = ["v4", "serde"] }
rest_macro = { path = "crates/rest_macro", version = "0.1.8" }
rest_macro_core = { path = "crates/rest_macro_core", version = "0.1.8" }
log = "0.4"
env_logger = "0.11"
actix-cors = "0.7"
actix-files = "0.6"
rustls = "0.23"
rustls-pemfile = "2.2"
turso = "0.6.0-pre.2"
reqwest = { version = "0.13", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
sha2 = "0.10"
hex = "0.4"
rcgen = "0.14"

[workspace.package]
version = "0.1.8"
edition = "2024"
authors = ["Matias Hiltunen"]
description = "An opinionated macro wrapper for building REST APIs with Actix Web and SQLx"
license = "MIT"
repository = "https://github.com/MatiasHiltunen/very_simple_rest"
keywords = ["rest", "api", "actix", "sqlx", "macros"]
categories = ["web-programming", "database"]

# This section is for the top-level crate that re-exports the components
[package]
name = "very_simple_rest"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

# Dependencies for the top-level crate
[dependencies]
actix-web.workspace = true
serde.workspace = true
sqlx.workspace = true
rest_macro = { workspace = true, optional = true }
rest_macro_core = { workspace = true }
serde_json.workspace = true
base64.workspace = true
# Additional dependencies required by the example
log.workspace = true
env_logger.workspace = true
actix-cors.workspace = true
actix-files.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
dotenv.workspace = true

# Feature configuration for the top-level crate
[features]
default = ["sqlite", "macros"]
macros = ["dep:rest_macro"]
sqlite = ["sqlx/sqlite", "rest_macro_core/sqlite"]
postgres = ["sqlx/postgres", "rest_macro_core/postgres"]
mysql = ["sqlx/mysql", "rest_macro_core/mysql"]
turso-local = ["sqlite", "rest_macro_core/turso-local"]

[dev-dependencies]
jsonwebtoken.workspace = true
serde_json.workspace = true
trybuild = "1"

# Add an example that points to the demo package
[[example]]
name = "demo"
path = "examples/demo/src/main.rs"
required-features = ["sqlite", "macros"]
