[package]
name = "examples"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
serde.workspace = true
sqlx.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
chrono.workspace = true
rest_macro = { path = "../crates/rest_macro" }
rest_macro_core = { path = "../crates/rest_macro_core" }

[[example]]
name = "demo"
path = "demo.rs" 