[package]
name = "vsra"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The vsr command-line interface for very_simple_rest"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
default-run = "vsr"
build = "build.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"
indicatif = "0.18"
actix-web = { workspace = true, features = ["rustls-0_23"] }
actix-cors.workspace = true
actix-files.workspace = true
base64.workspace = true
sqlx = { workspace = true, features = ["sqlite", "postgres", "mysql"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
dotenv.workspace = true
rest_macro_core = { workspace = true, features = ["codegen", "sqlite", "turso-local", "postgres", "mysql"] }
bcrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
colored = "3.1"
rand.workspace = true
regex = "1.12.3"
reqwest = { version = "0.13", features = ["blocking", "json"] }
rcgen.workspace = true
brotli = "7.0.0"
flate2 = "1.1.0"
sha2.workspace = true
aws-config = "1.8"
aws-sdk-s3 = "1.84"
aws-credential-types = "1.2"
log.workspace = true
syn.workspace = true
prettyplease = "0.2"
url = "2"

[dev-dependencies]
jsonwebtoken.workspace = true

[lib]
name = "vsra"
path = "src/lib.rs"

[[bin]]
name = "vsr"
path = "src/main.rs"
