[package]
name = "vsra"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The vsr command-line interface for very_simple_rest"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
default-run = "vsr"
build = "build.rs"

[features]
default = ["sqlite", "turso-local", "postgres"]
sqlite = ["sqlx/sqlite", "rest_macro_core/sqlite"]
postgres = ["sqlx/postgres", "rest_macro_core/postgres"]
mysql = ["sqlx/mysql", "rest_macro_core/mysql"]
turso-local = ["sqlite", "rest_macro_core/turso-local"]
aws-sdk-s3-backup = ["dep:aws-config", "dep:aws-sdk-s3"]
s3-backup = ["aws-sdk-s3-backup"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"
indicatif = "0.18"
actix-web = { workspace = true, features = ["rustls-0_23"] }
actix-cors.workspace = true
actix-files.workspace = true
base64.workspace = true
sqlx.workspace = true
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
dotenvy.workspace = true
rest_macro_core = { workspace = true, features = ["codegen"] }
bcrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
colored = "3.1"
rand.workspace = true
regex = "1.12.3"
reqwest = { workspace = true, features = ["blocking"] }
rcgen.workspace = true
brotli = "7.0.0"
flate2 = "1.1.0"
sha2.workspace = true
futures-util = "0.3"
object_store = { workspace = true, features = ["aws", "fs"] }
aws-config = { version = "1.8", optional = true }
aws-sdk-s3 = { version = "1.84", optional = true }
log.workspace = true
syn.workspace = true
prettyplease = "0.2"
url = "2"
garde.workspace = true

[dev-dependencies]
jsonwebtoken.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }

[lib]
name = "vsra"
path = "src/lib.rs"

[[bin]]
name = "vsr"
path = "src/main.rs"
