[package]
name = "rest_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
proc-macro-crate.workspace = true
rest_macro_core = { workspace = true, features = ["codegen"] }
