
[package]
name = "rest_macro_admin_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = { version = "0.27", features = ["web"] }
egui = "0.27"
wasm-bindgen = "0.2"
gloo-net = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "console"]

[dependencies.js-sys]
version = "0.3"
