[package]
name = "rest_macro_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
codegen = ["dep:eon", "dep:heck", "dep:proc-macro2", "dep:quote", "dep:syn"]

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
actix-files.workspace = true
serde.workspace = true
sqlx.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
chrono.workspace = true
dotenv = "0.15.0"
rand.workspace = true
log = { workspace = true }
env_logger = { workspace = true }
rpassword = "7.2"
eon = { workspace = true, optional = true }
heck = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
