[package]
name = "rest_macro_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core compiler and runtime support for very_simple_rest and the vsr CLI"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = []
codegen = ["dep:eon", "dep:heck", "dep:proc-macro2", "dep:quote", "dep:syn"]
turso-local = ["dep:turso"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
actix-files.workspace = true
serde.workspace = true
sqlx.workspace = true
sqlx-core = "0.8.6"
rustls.workspace = true
rustls-pemfile.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
dotenv = "0.15.0"
rand.workspace = true
log = { workspace = true }
env_logger = { workspace = true }
rpassword = "7.4"
either = "1"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["sync"] }
url = "2"
object_store = { version = "0.13", default-features = false, features = ["fs"] }
eon = { workspace = true, optional = true }
heck = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
turso = { workspace = true, optional = true }
uuid.workspace = true
reqwest.workspace = true
lettre.workspace = true
sha2.workspace = true
hex.workspace = true
