[package]
name = "demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "any", "macros"] }
serde_json = "1.0"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = "0.4"
very_simple_rest = { path = "../.." }
log = "0.4"
env_logger = "0.10"
actix-cors = "0.6"
actix-files = "0.6"

# Explicitly defining the binary target to avoid confusion
[[bin]]
name = "demo"
path = "src/main.rs"


