[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
authors = ["{{author}}"]
license = "{{license}}"
readme = "README.md"
repository = "{{repository_url}}"

[dependencies]
very_simple_rest = "0.1.0"
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite", "time", "uuid"] }
tokio = { version = "1.34", features = ["full"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
dotenvy = "0.15"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }

# Optional dependencies - uncomment as needed
# postgres = { version = "0.19", optional = true }
# mysql = { version = "24.0", optional = true }

[features]
default = ["sqlite"]
sqlite = []
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"] 